--- a/EFMRN2/MapMaker/styles.css
+++ b/EFMRN2/MapMaker/styles.css
@@ -1,12 +1,22 @@
 :root {
-  --mapx: '-';
-  --mapy: '-';
+  --mapX: '-';
 }
+
 #box {
   height: 90vh;
   width: 90vh;
   display: grid;
-  grid-template-columns: repeat(var(--mapx), 1fr);
+  grid-template-columns: repeat(10, 1fr);
+  grid-template-rows: repeat(10, 1fr);
+  outline:solid black;
+}
+
+#box::after {
+  height: 90vh;
+  width: 90vh;
+  display: grid;
+  grid-template-columns: repeat(var(--mapX), 1fr);
+  grid-template-rows: repeat(var(--maxY), 1fr);
   outline:solid black;
 }
 
@@ -14,7 +24,6 @@
   width: 100%;
   height: 100%;
   border: solid black;
-  /* background-color: rgb(81, 139, 81); */
 }
 
 #box > div:hover {
