--- a/EFMRN2/MapMaker/styles.css
+++ b/EFMRN2/MapMaker/styles.css
@@ -1,28 +1,18 @@
-:root {
-  --mapX: '-';
-}
-
 #box {
-  height: 90vh;
+  padding:0;
+  margin: 0;
+  height: fit-content;
   width: 90vh;
   display: grid;
-  grid-template-columns: repeat(10, 1fr);
-  grid-template-rows: repeat(10, 1fr);
-  outline:solid black;
-}
-
-#box::after {
-  height: 90vh;
-  width: 90vh;
-  display: grid;
-  grid-template-columns: repeat(var(--mapX), 1fr);
-  grid-template-rows: repeat(var(--maxY), 1fr);
+  grid-gap: 0;
+  grid-template-rows: auto;
   outline:solid black;
 }
 
 #box > div {
-  width: 100%;
-  height: 100%;
+  box-sizing: border-box;
+  padding:0;
+  margin: 0;
   border: solid black;
 }
 
@@ -32,6 +22,7 @@
 #outerContainer {
   display: grid;
   grid-template-columns: 1fr 1fr;
+  grid-template-rows: 1fr 1fr;
 }
 
 .void {
