make stuff work

--- a/EFMRN2/Views/Account/Index.cshtml
+++ b/EFMRN2/Views/Account/Index.cshtml
@@ -1,4 +1,8 @@
-<h2>Authentication with Identity</h2>
+<div class="Account-Head-div">
+    <h2>Welcome to</h2>
+    <h1>The Garden Of Your Mind<h1>
+    <h3>Wont You Be My Neighbor?</h3>
+</div>
 <hr />
 @if (User.Identity.IsAuthenticated)
 {
