--- a/EFMRN2/Views/Account/Login.cshtml
+++ b/EFMRN2/Views/Account/Login.cshtml
@@ -2,6 +2,13 @@
 
 @model LoginViewModel
 
+<div class="Account-Head-div">
+    <h2>Welcome to</h2>
+    <h1>The Garden Of Your Mind<h1>
+    <h3>Wont You Be My Neighbor?</h3>
+</div>
+<hr />
+
 <h2>Log in with your account</h2>
 <hr />
 @using (Html.BeginForm())
