--- a/EFMRN2/Views/Account/Register.cshtml
+++ b/EFMRN2/Views/Account/Register.cshtml
@@ -2,7 +2,14 @@
 
 @model RegisterViewModel
 
-<h2>Register a new user</h2>
+<div class="Account-Head-div">
+    <h2>Welcome to</h2>
+    <h1>The Garden Of Your Mind<h1>
+    <h3>Wont You Be My Neighbor?</h3>
+</div>
+<hr />
+
+<h2>Register an Account</h2>
 <hr />
 @using (Html.BeginForm("Register", "Account", FormMethod.Post))
 {
