add instructions header and clean up console logs and comments

--- a/EFMRN2/MapMaker/styles.css
+++ b/EFMRN2/MapMaker/styles.css
@@ -90,9 +90,9 @@
 }
 
 .lavaTile {
-  background-color: aqua;
+  background-color: rgb(206, 27, 3);
 }
 
 .spikePitTile {
-  background-color: aqua;
+  background-color: rgb(71, 233, 79);
 }
