--- a/EFMRN2/Views/Shared/_Layout.cshtml
+++ b/EFMRN2/Views/Shared/_Layout.cshtml
@@ -7,6 +7,7 @@
     <link rel="stylesheet" type="text/css" href="~/css/style.css" />
 </head>
 <body>
+    @await Html.PartialAsync("_AudioManager")
     @RenderBody()
 </body>
 </html>
