--- a/EFMRN2/Views/Account/Login.cshtml
+++ b/EFMRN2/Views/Account/Login.cshtml
@@ -8,8 +8,6 @@
     <h3>Wont You Be My Neighbor?</h3>
 </div>
 
-<h2>Log in with your account</h2>
-<hr />
 @using (Html.BeginForm())
 {
     @Html.LabelFor(m => m.Email)
@@ -18,5 +16,5 @@
     @Html.LabelFor(m => m.Password)
     @Html.PasswordFor(m => m.Password)
 
-    <input type="submit" value="Log in" class="btn log-in" />
+    <input type="submit" value="Log in" class="btn log-in-input" />
 }
