--- a/EFMRN2/Views/Account/Register.cshtml
+++ b/EFMRN2/Views/Account/Register.cshtml
@@ -7,9 +7,7 @@
     <h1>The Garden Of Your Mind<h1>
     <h3>Wont You Be My Neighbor?</h3>
 </div>
-<hr />
 
-<h2>Register an Account</h2>
 @using (Html.BeginForm("Register", "Account", FormMethod.Post))
 {
     @Html.LabelFor(user => user.Email)
@@ -21,5 +19,5 @@
     @Html.LabelFor(user=> user.ConfirmPassword)
     @Html.PasswordFor(user=> user.ConfirmPassword)
 
-    <input type="submit" value="Register" class="btn register"/>
+    <input type="submit" value="Register" class="btn register-input"/>
 }
