--- a/EFMRN2/wwwroot/css/style.css
+++ b/EFMRN2/wwwroot/css/style.css
@@ -1,13 +1,28 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap');
 
 body {
-  background-color: rgb(246,248,246);
+  background-image:url(../img/background.jpg);
+  background-position: 0 -4em;
   font-family: 'Poppins', Arial, Helvetica, sans-serif;
   text-align: center;
 }
 
 a {
   text-decoration: none;
+}
+
+label {
+  display: block;
+  color:rgb(48,84,49);
+  font-size: 1.3rem;
+  margin-bottom: .5em;
+  margin-top: 1em;
+}
+
+input {
+  display: block;
+  margin: 0 auto;
+  font-size: 1.3rem;
 }
 
 #TileDivs > div {
@@ -35,6 +50,7 @@ a {
   font-weight: normal;
   font-size: 2em;
   margin-bottom: 0;
+  text-align: left;
 }
 
 .Account-Head-div h3 {
@@ -43,6 +59,7 @@ a {
   font-weight: normal;
   font-size: 2em;
   margin-top: 0;
+  margin-bottom: 2em;
 }
 
 .floor {
@@ -55,4 +72,68 @@ a {
 
 .void {
   background-color: black;
+}
+
+.log-in {
+  display: flow-root;
+  margin-top: 8em;
+  margin-bottom: 5em;
+}
+
+.log-in a {
+  background-color: rgb(207,243,205);
+  padding: .5em 2.5em;
+  border-radius: .5em;
+  font-size: 1.5rem;
+  color: black;
+}
+
+.log-in a:hover {
+  background-color:rgb(144, 168, 143);
+  color: white;
+}
+
+.register a {
+  background-color: rgb(210,172,172);
+  padding: .5em 2em;
+  border-radius: .5em;
+  font-size: 1.5rem;
+  color: black;
+}
+
+.register a:hover {
+  background-color:rgb(173, 133, 133);
+  color: white;
+}
+
+.log-in-input {
+  margin-top: 2em;
+  background-color: rgb(207,243,205);
+  padding: .5em 2.5em;
+  border-radius: .5em;
+  font-size: 1.3rem;
+  color: black;
+  border: none;
+}
+
+.log-in-input:hover {
+  background-color:rgb(144, 168, 143);
+  color: white;
+  cursor: pointer;
+}
+
+.register-input {
+  margin-top: 2em;
+  background-color: rgb(210,172,172);
+  padding: .5em 2em;
+  border-radius: .5em;
+  font-size: 1.3rem;
+  color: black;
+  border: none;
+}
+
+.register-input:hover {
+  background-color:rgb(173, 133, 133);
+  color: white;
+  cursor: pointer;
 }
