--- a/EFMRN2/Views/Shared/_AudioManager.cshtml
+++ b/EFMRN2/Views/Shared/_AudioManager.cshtml
@@ -1,6 +1,6 @@
 <script src="~/js/AudioManager.js"></script>
 <div class="audio">
-  <audio id='over-world-audio'>
-    <source src="https://docs.google.com/uc?export=download&id=1J5jW7DEtMi6149ZagymZbjpz2RDfMELR">
+  <audio id='main-theme'>
+    <source src="https://drive.google.com/file/d/1g7hMzGXYpvD7N_BKe6yMspRBaR0hiaw0/view?usp=sharing">
   </audio>
 </div>
