--- a/EFMRN2/Views/Account/Index.cshtml
+++ b/EFMRN2/Views/Account/Index.cshtml
@@ -10,6 +10,7 @@
     {
         <input type="submit" class="btn btn-default" value="Log out" />
     }
+    @Html.ActionLink("go to game","Game","Home");
 }
 else
 {
