create cut scene view

--- a/EFMRN2/wwwroot/css/style.css
+++ b/EFMRN2/wwwroot/css/style.css
@@ -5,6 +5,7 @@ body {
   background-position: 0 -4em;
   font-family: 'Poppins', Arial, Helvetica, sans-serif;
   text-align: center;
+  margin: 0;
 }
 
 a {
@@ -23,6 +24,10 @@ input {
   display: block;
   margin: 0 auto;
   font-size: 1.3rem;
+}
+
+h1 {
+  margin: 0;
 }
 
 #TileDivs > div {
@@ -136,4 +141,44 @@ input {
   background-color:rgb(173, 133, 133);
   color: white;
   cursor: pointer;
+}
+
+#dark-screen {
+  background-color: rgba(0,0,0,.5);
+  width: 100vw;
+  height: 100vh;
+  position: absolute;
+  z-index: 500;
+  display: flex;
+}
+
+#text-box {
+  background-color: white;
+  width: 75%;
+  height: 18em;
+  border-radius: 3em;
+  border: 1em rgb(42,65,41) solid;
+  margin: 0 auto;
+  align-self: flex-end;
+  margin-bottom: 1em;
+  text-align: right;
+}
+
+#text-box p {
+  font-size: 1.7rem;
+  width: 90%;
+  display: block;
+  margin: 1em auto;
+  text-align: left;
+  color: rgb(112,112,112);
+}
+
+#next-btn {
+  font-size: 1.7rem;
+  background-color:rgb(190, 233, 192);
+  border: none;
+  border-radius: .5em;
+  padding: .25em 2em;
+  color: rgb(112,112,112);
+  margin-right: 1em; 
 }
