--- a/EFMRN2/Views/Home/Game.cshtml
+++ b/EFMRN2/Views/Home/Game.cshtml
@@ -1,5 +1,12 @@
 <p hidden id="user">@ViewBag.UserId</p>
 
+<div id="dark-screen">
+    <div id="text-box">
+        <p id="current-text">Hello! Lorem ipsum dolor sit amet, consectetur adipiscing elit. In scelerisque maximus eros id accumsan. Sed elementum nibh id metus cursus, ullamcorper ultrices felis scelerisque. Mauris dictum venenatis nulla eu luctus. Sed sit amet est mauris. Donec pharetra ac arcu cursus tristique. Aliquam et egestas lacus.</p>
+        <button id="next-btn">Next</button>
+    </div>
+</div>
+
 <div id="GameContainer">
   <div id="TileDivs">
     <div id="1"></div>
@@ -56,3 +63,4 @@
 </div>
 
 <script rel="Javascript" src="~/js/GameLoading.js"></script>
+<script src="~/js/DarkScreen.js"></script>
