--- a/EFMRN2/wwwroot/css/style.css
+++ b/EFMRN2/wwwroot/css/style.css
@@ -37,11 +37,15 @@ h1 {
 .floor {
   background-image: url(../img/floor.png);
   background-size: contain;
+  image-rendering: crisp-edges;
+  image-rendering: pixelated;
 }
 
 .wall {
   background-image: url(../img/wall.png);
   background-size: contain;
+  image-rendering: crisp-edges;
+  image-rendering: pixelated;
 }
 
 .void {
@@ -51,101 +55,148 @@ h1 {
 .carpet1 {
   background-image: url(../img/carpet1.png);
   background-size: contain;
+  image-rendering: crisp-edges;
+  image-rendering: pixelated;
 }
 
 .carpet2 {
   background-image:url(../img/carpet2.png);
   background-size: contain;
+  image-rendering: crisp-edges;
+  image-rendering: pixelated;
 }
 
 .carpet3 {
   background-image:url(../img/carpet3.jpg);
   background-size: contain;
+  image-rendering: crisp-edges;
+  image-rendering: pixelated;
 }
 
 .carpet4 {
   background-image:url(../img/carpet4.jpg);
   background-size: contain;
+  image-rendering: crisp-edges;
+  image-rendering: pixelated;
 }
 
 .carpet4fancy {
   background-image:url(../img/carpet4fancy.png);
   background-size: contain;
+  image-rendering: crisp-edges;
+  image-rendering: pixelated;
 }
 
 .darkfloor {
   background-image:url(../img/darkfloor.png);
   background-size: contain;
+  image-rendering: crisp-edges;
+  image-rendering: pixelated;
 }
 
 .door {
   background-image:url(../img/door.png);
   background-size: contain;
+  image-rendering: crisp-edges;
+  image-rendering: pixelated;
 }
 
 .grass {
   background-image:url(../img/grass.png);
   background-size: contain;
+  image-rendering: crisp-edges;
+  image-rendering: pixelated;
 }
 
 .grass2 {
   background-image:url(../img/grass2.png);
   background-size: contain;
+  image-rendering: crisp-edges;
+  image-rendering: pixelated;
+}
+
+.grass3 {
+  background-image:url(../img/grass3.png);
+  background-size: contain;
+  image-rendering: crisp-edges;
+  image-rendering: pixelated;
 }
 
 .hedge {
   background-image:url(../img/hedge.png);
   background-size: contain;
+  image-rendering: crisp-edges;
+  image-rendering: pixelated;
 }
 
 .idunno {
   background-image:url(../img/idunno.png);
   background-size: contain;
+  image-rendering: crisp-edges;
+  image-rendering: pixelated;
 }
 
 .tilefloor {
   background-image:url(../img/tilefloor.png);
   background-size: contain;
+  image-rendering: crisp-edges;
+  image-rendering: pixelated;
 }
 
 .window {
   background-image:url(../img/window.png);
   background-size: contain;
+  image-rendering: crisp-edges;
+  image-rendering: pixelated;
 }
 
 .house-bottom-left {
   background-image:url(../img/house-bottom-left.png);
   background-size: contain;
+  image-rendering: crisp-edges;
+  image-rendering: pixelated;
 }
 
 .house-bottom-mid {
   background-image:url(../img/house-bottom-mid.png);
   background-size: contain;
+  image-rendering: crisp-edges;
+  image-rendering: pixelated;
 }
 
 .house-bottom-right {
   background-image:url(../img/house-bottom-right.png);
   background-size: contain;
+  image-rendering: crisp-edges;
+  image-rendering: pixelated;
 }
 
 .house-top-right {
   background-image:url(../img/house-top-right.png);
   background-size: contain;
+  image-rendering: crisp-edges;
+  image-rendering: pixelated;
 }
 
 .house-top-mid {
   background-image:url(../img/house-top-mid.png);
   background-size: contain;
+  image-rendering: crisp-edges;
+  image-rendering: pixelated;
 }
 
 .house-top-left {
   background-image:url(../img/house-top-left.png);
   background-size: contain;
+  image-rendering: crisp-edges;
+  image-rendering: pixelated;
 }
 
 .houseporch {
   background-image:url(../img/houseporch.jpg);
   background-size: contain;
+  image-rendering: crisp-edges;
+  image-rendering: pixelated;
 }
 
 
@@ -154,48 +205,176 @@ h1 {
 .p1-down {
   background-image:url(../img/p1-down.png);
   background-size: contain;
+  image-rendering: crisp-edges;
+  image-rendering: pixelated;
 }
 
 .p1-left {
   background-image:url(../img/p1-left.png);
   background-size: contain;
+  image-rendering: crisp-edges;
+  image-rendering: pixelated;
 }
 
 .p1-right {
   background-image:url(../img/p1-right.png);
   background-size: contain;
+  image-rendering: crisp-edges;
+  image-rendering: pixelated;
 }
 
 .p1-up {
   background-image:url(../img/p1-up.png);
   background-size: contain;
+  image-rendering: crisp-edges;
+  image-rendering: pixelated;
 }
 
 .p2-down {
   background-image:url(../img/p2-down.png);
   background-size: contain;
+  image-rendering: crisp-edges;
+  image-rendering: pixelated;
 }
 
 .p2-left {
   background-image:url(../img/p2-left.png);
   background-size: contain;
+  image-rendering: crisp-edges;
+  image-rendering: pixelated;
 }
 
 .p2-right {
   background-image:url(../img/p2-right.png);
   background-size: contain;
+  image-rendering: crisp-edges;
+  image-rendering: pixelated;
 }
 
 .p2-up {
   background-image:url(../img/p2-up.png);
   background-size: contain;
+  image-rendering: crisp-edges;
+  image-rendering: pixelated;
+}
+
+.p3-up {
+  background-image:url(../img/p3-up.png);
+  background-size: contain;
+  image-rendering: crisp-edges;
+  image-rendering: pixelated;
+}
+
+.p3-left {
+  background-image:url(../img/p3-left.png);
+  background-size: contain;
+  image-rendering: crisp-edges;
+  image-rendering: pixelated;
+}
+
+.p3-right {
+  background-image:url(../img/p3-right.png);
+  background-size: contain;
+  image-rendering: crisp-edges;
+  image-rendering: pixelated;
+}
+
+.p3-down {
+  background-image:url(../img/p3-down.png);
+  background-size: contain;
+  image-rendering: crisp-edges;
+  image-rendering: pixelated;
+}
+
+.p4-up {
+  background-image:url(../img/p4-up.png);
+  background-size: contain;
+  image-rendering: crisp-edges;
+  image-rendering: pixelated;
+}
+
+.p4-left {
+  background-image:url(../img/p4-left.png);
+  background-size: contain;
+  image-rendering: crisp-edges;
+  image-rendering: pixelated;
+}
+
+.p4-right {
+  background-image:url(../img/p4-right.png);
+  background-size: contain;
+  image-rendering: crisp-edges;
+  image-rendering: pixelated;
+}
+
+.p4-down {
+  background-image:url(../img/p4-down.png);
+  background-size: contain;
+  image-rendering: crisp-edges;
+  image-rendering: pixelated;
+}
+
+.p5-up {
+  background-image:url(../img/p5-up.png);
+  background-size: contain;
+  image-rendering: crisp-edges;
+  image-rendering: pixelated;
+}
+
+.p5-left {
+  background-image:url(../img/p5-left.png);
+  background-size: contain;
+  image-rendering: crisp-edges;
+  image-rendering: pixelated;
+}
+
+.p5-right {
+  background-image:url(../img/p5-right.png);
+  background-size: contain;
+  image-rendering: crisp-edges;
+  image-rendering: pixelated;
+}
+
+.p5-down {
+  background-image:url(../img/p5-down.png);
+  background-size: contain;
+  image-rendering: crisp-edges;
+  image-rendering: pixelated;
+}
+
+.p6-up {
+  background-image:url(../img/p6-up.png);
+  background-size: contain;
+  image-rendering: crisp-edges;
+  image-rendering: pixelated;
+}
+
+.p6-left {
+  background-image:url(../img/p6-left.png);
+  background-size: contain;
+  image-rendering: crisp-edges;
+  image-rendering: pixelated;
+}
+
+.p6-right {
+  background-image:url(../img/p6-right.png);
+  background-size: contain;
+  image-rendering: crisp-edges;
+  image-rendering: pixelated;
+}
+
+.p6-down {
+  background-image:url(../img/p6-down.png);
+  background-size: contain;
+  image-rendering: crisp-edges;
+  image-rendering: pixelated;
 }
 
 
 /* game container */
 
 #TileDivs > div {
-  border: .25em solid black;
+  border: .1em solid black;
 }
 
 #GameContainer {
