insert sprites that face the correct direction multiplayer

--- a/EFMRN2/Views/Home/Game.cshtml
+++ b/EFMRN2/Views/Home/Game.cshtml
@@ -54,5 +54,11 @@
   </div>
   <canvas id="DisplayCanvas"></canvas>
 </div>
+<div hidden>
+  <img src="~/img/p1-up.png" id = "gup">
+  <img src="~/img/p1-down.png" id = "gdown">
+  <img src="~/img/p1-left.png" id = "gleft">
+  <img src="~/img/p1-right.png" id = "gright">
+</div>
 
 <script rel="Javascript" src="~/js/GameLoading.js"></script>
