--- a/EFMRN2/Views/Account/Index.cshtml
+++ b/EFMRN2/Views/Account/Index.cshtml
@@ -5,12 +5,12 @@
 </div>
 @if (User.Identity.IsAuthenticated)
 {
-    <p>Hello @User.Identity.Name!</p>
+    <p id="account-index-p">Welcome @User.Identity.Name!</p>
+    <p class="join-game">@Html.ActionLink("Join Game","Game","Home")</p>
     @using (Html.BeginForm("LogOff", "Account"))
     {
-        <input type="submit" class="btn btn-default" value="Log out" />
+        <input type="submit" class="btn logout-btn" value="Log out" />
     }
-    @Html.ActionLink("go to game","Game","Home");
 }
 else
 {
