--- a/EFMRN2/wwwroot/css/style.css
+++ b/EFMRN2/wwwroot/css/style.css
@@ -383,6 +383,15 @@ h1 {
 
 /* individual view styles */
 
+#hero-img {
+  max-height: 40em;
+  margin-top: -3em;
+}
+
+#home-log-in {
+  margin: 0;
+}
+
 .Account-Head-div {
   width: fit-content;
   margin: 0 auto;
@@ -454,6 +463,43 @@ h1 {
   border: none;
 }
 
+.logout-btn {
+  border: none;
+  background-color: rgb(210,172,172);
+  padding: .5em 2em;
+  border-radius: .5em;
+  font-size: 1.2rem;
+  color: black;
+}
+
+.logout-btn:hover {
+  background-color:rgb(173, 133, 133);
+  color: white;
+  cursor: pointer;
+}
+
+.join-game {
+  margin: 2em;
+}
+
+.join-game a{
+  background-color: rgb(207,243,205);
+  padding: .5em 2.5em;
+  border-radius: .5em;
+  font-size: 1.5rem;
+  color: black;
+}
+
+.join-game a:hover {
+  background-color:rgb(144, 168, 143);
+  color: white;
+}
+
+#account-index-p {
+  font-size: 1.5rem;
+  color: rgb(48,84,49);
+}
+
 .log-in-input:hover {
   background-color:rgb(144, 168, 143);
   color: white;
@@ -516,19 +562,29 @@ h1 {
   margin-right: 1em; 
 }
 
-.void {
-  background-color: black;
+#nav-bar {
+  display: flex;
+  list-style: none;
+  background-color: rgb(209,209,209);
+  margin-top:0;
+  margin-bottom: 2em;
+  padding: 0 1em;
 }
 
-.mud {
-  background-color: brown;
+#item-2 {
+  margin-left: auto;
+  margin-top: .4em;
 }
-.pressure {
-  background-color: cyan;
+
+#nav-bar h1 {
+  font-size: 1.2rem;
+  margin: 0;
+  text-align: left;
+  color:rgb(48,84,49);
 }
-.ice {
-  background-color:  #17e2fd;
-}
-.lava{
-  background-color: red;
+
+#nav-bar h2 {
+  font-size: 1rem;
+  margin: 0;
+  color:rgb(48,84,49);
 }
