--- a/EFMRN2/Views/Home/Game.cshtml
+++ b/EFMRN2/Views/Home/Game.cshtml
@@ -66,6 +66,7 @@
   <img src="~/img/p1-down.png" id = "gdown">
   <img src="~/img/p1-left.png" id = "gleft">
   <img src="~/img/p1-right.png" id = "gright">
+  <audio controls loop autoplay src="~/resources/EFMRN2_song1_-_12622_10.40_AM.mp3"></audio>
 </div>
 
 <script rel="Javascript" src="~/js/GameLoading.js"></script>
